lib/src/compiler/tests/testdata/errors/55.out
error[E100]: wrong type
 --> line:4:34
  |
4 |     test_proto2.map_string_int64[0]
  |                                  ^ expression should be `string`, but is `integer`
  |